summary commercial systems added

--- a/docs/Developers Manual/parts/plagiarism.tex
+++ b/docs/Developers Manual/parts/plagiarism.tex
@@ -2,107 +2,108 @@
 In this chapter we will give a brief overview of the most important topics to get you up to speed with the domain of the software, if you are not already familiar with it.
 
 \section{Plagiarism definition} 
-What is Plagiarism?
-
-Many people think of plagiarism as copying another's work, or borrowing someone else's original ideas. But terms like "copying" and "borrowing" can disguise the seriousness of the offense:
-According to the Merriam-Webster Online Dictionary, to "plagiarize" means
-
-    to steal and pass off (the ideas or words of another) as one's own
-    to use (another's production) without crediting the source
-    to commit literary theft
-    to present as new and original an idea or product derived from an existing source.
-
-In other words, plagiarism is an act of fraud. It involves both stealing someone else's work and lying about it afterward.
-But can words and ideas really be stolen?
-
-According to U.S. law, the answer is yes. The expression of original ideas is considered intellectual property, and is protected by copyright laws, just like original inventions. Almost all forms of expression fall under copyright protection as long as they are recorded in some way (such as a book or a computer file).
-All of the following are considered plagiarism:
-
-    turning in someone else's work as your own
-    copying words or ideas from someone else without giving credit
-    failing to put a quotation in quotation marks
-    giving incorrect information about the source of a quotation
-    changing words but copying the sentence structure of a source without giving credit
-    copying so many words or ideas from a source that it makes up the majority of your work, whether you give credit or not (see our section on "fair use" rules)
-
-Most cases of plagiarism can be avoided, however, by citing sources. Simply acknowledging that certain material has been borrowed, and providing your audience with the information necessary to find that source, is usually enough to prevent plagiarism. See our section on citation for more information on how to cite sources properly.
-
----
-Plagiarism and collusion in students' assessed work are issues of increasing con- cern to the academic community as a whole. By plagiarism we mean the sub mission of part or all of another person's work as if it were ones own, without the knowledge of the author, and with intention to deceive. Collusion, on the other hand is the submission of work as ones own when (at least some of) that work has been done partly or wholly by another person, and that other person is party to the deception.
-1
-Plagiarism and Collusion Detection using the Smith-Waterman Algorithm
-
-----
-
-    Plagiarism occurs when a student, with intent to deceive or with reckless disregard for proper scholarly procedures, presents any information, ideas or phrasing of another as if they were his/her own and/or does not give appropriate credit to the original source. Proper scholarly procedures require that all quoted material be identified by quotation marks or indentation on the page, and the source of information and ideas, if from another, must be identified and be attributed to that source. Students are responsible for learning proper scholarly procedures.1
-
-This definition suggests that there are two kinds of plagiarism: one that is committed with the intent to deceive (intentional plagiarism) and one resulting from the disregard for proper scholarly procedures (unintentional plagiarism).
-1The Duke Community Standard in Practice: A Guide for Undergraduates 2011-12, Pages 18 and 20.
-Examples of Intentional Plagiarism
-
-    Purchasing a pre-written paper (either by mail or electronically).
-    Letting someone else write part or all of a paper for you.
-    Paying someone else to write part or all of a paper for you.
-    Submitting as your own someone else's unpublished work (including a computer program or algorithm), either with or without permission.
-    Submitting as your own, work done jointly by a group in which you may have participated.
-    Submitting work done by you, but for another class or another purpose without documenting that it was previously used.
-    Creating phony citations.
-
-
-Examples of Unintentional Plagiarism:
-
-    Failure to cite a source that is not common knowledge.
-    Failure to "quote" or block quote author's exact words, even if documented.
-    Failure to put a paraphrase in your own words, even if documented.
-    Failure to put a summary in your own words, even if documented.
-    Failure to be loyal to a source.
 
 
 
-\begin{itemize}
-\item \textbf{Copy\&paste}
-\item \textbf{Copy, shake\&paste}
-\item \textbf{Patchwriting (rewording)}
-\item \textbf{Structural plagiarism}
-\item \textbf{Translations}
-\end{itemize}
-
-
-
-
-Kurze Definition und Begriffserklaerung 
-	\subsection{History of plagiarism} 
-	Geschichtlicher Hintergrund: von den Roemern zu Wild usw. 	
+%What is Plagiarism?
+%
+%Many people think of plagiarism as copying another's work, or borrowing someone else's original ideas. But terms like "copying" and "borrowing" can disguise the seriousness of the offense:
+%According to the Merriam-Webster Online Dictionary, to "plagiarize" means
+%
+%    to steal and pass off (the ideas or words of another) as one's own
+%    to use (another's production) without crediting the source
+%    to commit literary theft
+%    to present as new and original an idea or product derived from an existing source.
+%
+%In other words, plagiarism is an act of fraud. It involves both stealing someone else's work and lying about it afterward.
+%But can words and ideas really be stolen?
+%
+%According to U.S. law, the answer is yes. The expression of original ideas is considered intellectual property, and is protected by copyright laws, just like original inventions. Almost all forms of expression fall under copyright protection as long as they are recorded in some way (such as a book or a computer file).
+%All of the following are considered plagiarism:
+%
+%    turning in someone else's work as your own
+%    copying words or ideas from someone else without giving credit
+%    failing to put a quotation in quotation marks
+%    giving incorrect information about the source of a quotation
+%    changing words but copying the sentence structure of a source without giving credit
+%    copying so many words or ideas from a source that it makes up the majority of your work, whether you give credit or not (see our section on "fair use" rules)
+%
+%Most cases of plagiarism can be avoided, however, by citing sources. Simply acknowledging that certain material has been borrowed, and providing your audience with the information necessary to find that source, is usually enough to prevent plagiarism. See our section on citation for more information on how to cite sources properly.
+%
+%---
+%Plagiarism and collusion in students' assessed work are issues of increasing con- cern to the academic community as a whole. By plagiarism we mean the sub mission of part or all of another person's work as if it were ones own, without the knowledge of the author, and with intention to deceive. Collusion, on the other hand is the submission of work as ones own when (at least some of) that work has been done partly or wholly by another person, and that other person is party to the deception.
+%1
+%Plagiarism and Collusion Detection using the Smith-Waterman Algorithm
+%
+%----
+%
+%    Plagiarism occurs when a student, with intent to deceive or with reckless disregard for proper scholarly procedures, presents any information, ideas or phrasing of another as if they were his/her own and/or does not give appropriate credit to the original source. Proper scholarly procedures require that all quoted material be identified by quotation marks or indentation on the page, and the source of information and ideas, if from another, must be identified and be attributed to that source. Students are responsible for learning proper scholarly procedures.1
+%
+%This definition suggests that there are two kinds of plagiarism: one that is committed with the intent to deceive (intentional plagiarism) and one resulting from the disregard for proper scholarly procedures (unintentional plagiarism).
+%1The Duke Community Standard in Practice: A Guide for Undergraduates 2011-12, Pages 18 and 20.
+%Examples of Intentional Plagiarism
+%
+%    Purchasing a pre-written paper (either by mail or electronically).
+%    Letting someone else write part or all of a paper for you.
+%    Paying someone else to write part or all of a paper for you.
+%    Submitting as your own someone else's unpublished work (including a computer program or algorithm), either with or without permission.
+%    Submitting as your own, work done jointly by a group in which you may have participated.
+%    Submitting work done by you, but for another class or another purpose without documenting that it was previously used.
+%    Creating phony citations.
+%
+%
+%Examples of Unintentional Plagiarism:
+%
+%    Failure to cite a source that is not common knowledge.
+%    Failure to "quote" or block quote author's exact words, even if documented.
+%    Failure to put a paraphrase in your own words, even if documented.
+%    Failure to put a summary in your own words, even if documented.
+%    Failure to be loyal to a source.
+%
+%
+%
+%\begin{itemize}
+%\item \textbf{Copy\&paste}
+%\item \textbf{Copy, shake\&paste}
+%\item \textbf{Patchwriting (rewording)}
+%\item \textbf{Structural plagiarism}
+%\item \textbf{Translations}
+%\end{itemize}
+%
+%
+%
+%
+%Kurze Definition und Begriffserklaerung 
+%Geschichtlicher Hintergrund: von den Roemern zu Wild usw. 	
+%	
+%	
+%	Twentieth-century dictionaries define plagiarism as "wrongful appropriation," "close imitation," or "purloining and publication," of another author's "language, thoughts, ideas, or expressions," and the representation of them as one's own original work,[1][2] but the notion remains problematic with nebulous boundaries.[3][4][5][6] There is no rigorous and precise distinction between imitation, stylistic plagiarism, copy, replica and forgery.[3][4][5][6]
+%
+%In the 1st century, the use of the Latin word plagiarius (literally kidnapper), to denote someone stealing someone else's work, was pioneered by Roman poet Martial, who complained that another poet had "kidnapped his verses." This use of the word was introduced into English in 1601 by dramatist Ben Jonson, to describe as a plagiary someone guilty of literary theft.[7][18]
+%
+%The derived form plagiarism was introduced into English around 1620.[19] The Latin plagi?rius, "kidnapper", and plagium, "kidnapping", has the root plaga ("snare", "net"), based on the Indo-European root *-plak, "to weave" (seen for instance in Greek plekein, Bulgarian "?????" pleta, Latin plectere, all meaning "to weave").
+%
+%The modern concept of plagiarism as immoral and originality as an ideal, emerged in Europe only in the 18th century, particularly with the Romantic movement.[7][11][12] Romantic aesthetic and ideology, still retains a significant strength in the 20th century, and encourages attaks against all that violates its values of genius, originality and individuality.[20] From the Romantic perspective, artistic techniques like parody are considered parasitic.[20] For centuries before, not only literature was considered "publica materies," a common property from which anybody could borrow at will, but the encouragement for authors and artists was actually to "copy the masters as closely as possible," for which the closer the copy the finer was considered the work.[7][8][13][21][22] This was the same in literature, music, painting and sculpture. In some cases, for a writer to invent their own plots was reproached as presumptuous.[7] This stood at the time of Shakespeare too, when it was common to appreciate more the similarity with an admired classical work, and the ideal was to avoid "unnecessary invention."[7][9][10]
+%
+%The modern ideals for originality and against plagiarism appeared in the 18th century, in the context of the economic and political history of the book trade, which will be exemplary and influential for the subsequent broader introduction of capitalism.[23] Originality, that traditionally had been deemed as impossible, was turned into an obligation by the emerging ideology of individualism.[10][13] In 1755 the word made it into Johnson's influential A Dictionary of the English Language, where he was cited in the entry for copier ("One that imitates; a plagiary; an imitator. Without invention a painter is but a copier, and a poet but a plagiary of others."), and in its own entry denoting both A thief in literature ("one who steals the thoughts or writings of another") and The crime of literary theft.[7][24]
+%
+%Later in the 18th century, the Romantic movement completed the transformation of the previous ideas about literature, developing the Romantic myth of artistic inspiration, which believes in the "individualised, inimitable act of literary creation", in the ideology of the "creation from nothingness" of a text which is an "autonomous object produced by an individual genious."[5][12][22][25][26][27][28] Plagiarism has often been used as a derogatory term for parodies.[29][30]
+%
+%Despite the 18th century new morals, and their current enforcement in the ethical codes of academia and journalism, the arts, by contrast, not only have resisted in their long-established tradition of copying as a fundamental practice of the creative process,[12][13][14][31] but with the boom of the modernist and postmodern movements, this practice has been accelerated, spread, increased, dramatically amplifyied to an unprecedented degree, to the point that has been heightened as the central and representative artistic device of these movements.[15][16][12] Plagiarism remains tolerated by 21st century artists.[13][14] An eraly rebuttal to Romantic aesthetic in this respect, came from Russian formalism.[20]
+%	
+%Entwicklung und gesellschaftliche Akzeptanz
+%	Anfang mit Gutenberg / Vroni Steuber usw.
+%
+%	Gesellschaftliche Probleme
+%	Universitaere Probleme
+%	
+%vroni-plag -- VroniPlag ist ein Wiki, d.h. jeder kann etwas beitragen. Und jeder, der etwas beitraegt, tut dies aus ganz persoenlichen Motiven. Es ist deshalb schwierig eine allgemeingueltige Antwort zu geben - trotzdem scheint bei vielen regelmaessigen VroniPlag Autoren eher die Sorge um die Wissenschaft im Vordergrund zu stehen und nicht parteipolitische Ueberlegungen. Siehe auch Frage zum Thema Motivation. 
+%
+%	
 	
 	
-	Twentieth-century dictionaries define plagiarism as "wrongful appropriation," "close imitation," or "purloining and publication," of another author's "language, thoughts, ideas, or expressions," and the representation of them as one's own original work,[1][2] but the notion remains problematic with nebulous boundaries.[3][4][5][6] There is no rigorous and precise distinction between imitation, stylistic plagiarism, copy, replica and forgery.[3][4][5][6]
 
-In the 1st century, the use of the Latin word plagiarius (literally kidnapper), to denote someone stealing someone else's work, was pioneered by Roman poet Martial, who complained that another poet had "kidnapped his verses." This use of the word was introduced into English in 1601 by dramatist Ben Jonson, to describe as a plagiary someone guilty of literary theft.[7][18]
-
-The derived form plagiarism was introduced into English around 1620.[19] The Latin plagi?rius, "kidnapper", and plagium, "kidnapping", has the root plaga ("snare", "net"), based on the Indo-European root *-plak, "to weave" (seen for instance in Greek plekein, Bulgarian "?????" pleta, Latin plectere, all meaning "to weave").
-
-The modern concept of plagiarism as immoral and originality as an ideal, emerged in Europe only in the 18th century, particularly with the Romantic movement.[7][11][12] Romantic aesthetic and ideology, still retains a significant strength in the 20th century, and encourages attaks against all that violates its values of genius, originality and individuality.[20] From the Romantic perspective, artistic techniques like parody are considered parasitic.[20] For centuries before, not only literature was considered "publica materies," a common property from which anybody could borrow at will, but the encouragement for authors and artists was actually to "copy the masters as closely as possible," for which the closer the copy the finer was considered the work.[7][8][13][21][22] This was the same in literature, music, painting and sculpture. In some cases, for a writer to invent their own plots was reproached as presumptuous.[7] This stood at the time of Shakespeare too, when it was common to appreciate more the similarity with an admired classical work, and the ideal was to avoid "unnecessary invention."[7][9][10]
-
-The modern ideals for originality and against plagiarism appeared in the 18th century, in the context of the economic and political history of the book trade, which will be exemplary and influential for the subsequent broader introduction of capitalism.[23] Originality, that traditionally had been deemed as impossible, was turned into an obligation by the emerging ideology of individualism.[10][13] In 1755 the word made it into Johnson's influential A Dictionary of the English Language, where he was cited in the entry for copier ("One that imitates; a plagiary; an imitator. Without invention a painter is but a copier, and a poet but a plagiary of others."), and in its own entry denoting both A thief in literature ("one who steals the thoughts or writings of another") and The crime of literary theft.[7][24]
-
-Later in the 18th century, the Romantic movement completed the transformation of the previous ideas about literature, developing the Romantic myth of artistic inspiration, which believes in the "individualised, inimitable act of literary creation", in the ideology of the "creation from nothingness" of a text which is an "autonomous object produced by an individual genious."[5][12][22][25][26][27][28] Plagiarism has often been used as a derogatory term for parodies.[29][30]
-
-Despite the 18th century new morals, and their current enforcement in the ethical codes of academia and journalism, the arts, by contrast, not only have resisted in their long-established tradition of copying as a fundamental practice of the creative process,[12][13][14][31] but with the boom of the modernist and postmodern movements, this practice has been accelerated, spread, increased, dramatically amplifyied to an unprecedented degree, to the point that has been heightened as the central and representative artistic device of these movements.[15][16][12] Plagiarism remains tolerated by 21st century artists.[13][14] An eraly rebuttal to Romantic aesthetic in this respect, came from Russian formalism.[20]
 	
-	
-	
-	
-
-	\subsection{Progress and social acceptance} (1 Seite)
-	Entwicklung und gesellschaftliche Akzeptanz
-	Anfang mit Gutenberg / Vroni Steuber usw.
-
-	Gesellschaftliche Probleme
-	Universitaere Probleme
-	
-vroni-plag -- VroniPlag ist ein Wiki, d.h. jeder kann etwas beitragen. Und jeder, der etwas beitraegt, tut dies aus ganz persoenlichen Motiven. Es ist deshalb schwierig eine allgemeingueltige Antwort zu geben - trotzdem scheint bei vielen regelmaessigen VroniPlag Autoren eher die Sorge um die Wissenschaft im Vordergrund zu stehen und nicht parteipolitische Ueberlegungen. Siehe auch Frage zum Thema Motivation. 
-
-
 \newpage
 \section{Basic Classification of Plagiarisms}
 
@@ -244,8 +245,6 @@ These computer assisted detection systems alone are not appropriate to find all 
 
 We found out that the most practical way is to combine both approaches - the first step is to use the computer-based detection to find similarities between the suspicious documents and the original papers. The second step is to examine the results, validate them and continue the search in a deeper level. (see figure 4 stage)
 
-
-
 (Culwin, Fintan; Lancaster, Thomas (2001), "Plagiarism issues for higher education", Vine 31 (2): 36-41, doi:10.1108/03055720010804005)
 
 \newpage
@@ -353,9 +352,7 @@ EUR 14,99/month. 1500 scans/month included. Every additional scan costs 1ct. Min
 
 Turnitin is a product by a company called iParadigms. It is a well-known US plagiarism software system and one of the most used plagiarism detection systems in the education sector. The website is online for nearly 13 years and the system is at the second position in the HTW "Plagiarism Detection System Test" 2010.  
 
-Die besten Ergebnisse erhaelt man durch Material, das bereits in deren Datenbank vorhanden ist. Plagiatsauffaelligkeiten werden auf dem Text farblich markiert und die Hauptquelle wird angezeigt.
-Was nicht so gut ist, ist das auch viele winzige Uebereinstimmungen gefunden werden, wie in einem englischen Text das englische Wort "of".
-
+The best results can be achieved with material which is already in the database. 
 
 In the past the had a lot of problems to deal with umlauts, and having a complex setup. They improved a lot of parts especially the german translation. Still a big problem for european countries is the copyright policy of Turnitin. They still storing copies of user material in their database without a permission. \href{http://plagiat.htw-berlin.de/software-en/2010-2/s10-01-turnitin/}{Plagiat Website}
 
@@ -587,31 +584,16 @@ Not stated.
 
 \subsubsection{Resume commercial software systems}
 
+Although over the years there are more software detection systems that claim to check text reliable if it's plagiarism or not, but the quality of the systems decreases. 
+A big problem that some of the tested systems offer "ghostwriting".
 
-
-Es gibt zwar von Jahr zu Jahr mehr Softwareprodukte, die von sich behaupten, einen Text 
-zuverlaessig daraufhin zu ueberpruefen, ob es sich um ein Plagiat handelt oder nicht. Aber: Diese Systeme haben nach temporaerer Besserung inzwischen wieder an Qualitaet verloren. Zu diesem ernuechternden Ergebnis kommen wir bei der  vierten Untersuchung von Softwareprodukten zur Plagiatserkennung. Besonders pikant: Einige der Systeme werden von hoechst zweifelhaften Unternehmen angeboten, darunter auch von solchen, die Ghostwriting anbieten.
-
-Im Test von 2010 - die vorherigen Tests fanden 2004, 2007 und 2008 statt - haben wir 26 Plagiaterkennungssysteme unter die Lupe genommen. Es gab auf dem Markt zwar 47 die wir finden konnten, aber wir mussten aus Zeitgruenden vorerst die Kollusionserkennungssysteme und die Systeme zur Erkennung von Plagiaten in Programmcode zurueckstellen. Auch Systeme, fuer die wir kein Zugang bekommen konnten (unter anderem Systeme, die veraergert waren, dass sie in vergangenen Tests so schlecht abgeschnitten haben), haben wir nicht testen koennen.  Fuer die Pruefung wurden neue Testfaelle in Englisch und Japanisch entwickelt und jedes System mit 42 kurzen Essays konfrontiert. Darueber hinaus wurden die Benutzerfreundlichkeit der Systeme und die Professionalitaet der Unternehmen bewertet.
-
-
-
-
-Fazit: Die auf dem Markt angebotenen Plagiatserkennungsysteme lassen sich derzeit drei Kategorien zuordnen: teilweise nuetzlich, kaum brauchbar und nutzlos. Teilweise nuetzliche Systeme koennen dann gut verwendet werden, wenn mit Hilfe einer Suchmachine und drei bis fuenf Woertern eines verdaechtigen Absatzes bereits erste Plagiatsindizien erbracht wurden. In diesen Faellen helfen Systeme wie PlagAware, Turnitin, Ephorus, PlagScan oder Urkund dabei, groessere Sicherheit zu gewinnen. Doch selbst die besten Systeme finden hoechstens 60 bis 70 Prozent der plagiierten Anteile. Eine ganze Reihe von weiteren Systemen sind hingegen kaum brauchbar. In der Kategorie der nutzlosen Systeme haben wir eine Reihe von Betruegern ausfindig gemacht.
-
-Unsere Empfehlung: Plagiatserkennungssysteme sollten nur bei konkretem Verdacht verwendet werden, statt die Studierenden unter Generalverdacht zu stellen. Parallel dazu sollte der Focus an Hochschulen und Schulen staerker auf der Aufklaerung liegen: Was ist ein Plagiat, warum darf nicht plagiiert werden und wie arbeitet man richtig? Dies sei sinnvoller als zuviel Zeit in die Durchsuchung von eingereichten Arbeiten bzw. in die Vermeidung von Fehlalarmen zu investieren.
-
----
-Prof. Dr. Debora Weber-Wulff, professor for media and computing at the University of Applied Sciences HTW Berlin has tested plagiarism detection systems in 2004, 2007, and 2008 and has published widely on the topic. In this fourth test series that was just completed at the end of 2010, 26 systems out of 47 available systems were closely examined. Particular focus was given to seeing how well the systems detect a known amount of plagiarism, and how they react when offered original material.
-
-In 2008 the systems fared slightly better on the test, but in 2010 many have lost the ability to detect plagiarisms that have been slightly edited - word orders switched, words dropped or added, or synonyms used. The best systems only reached a grade of C-, not quite reaching 70\% of the possible points.
+"In 2008 the systems fared slightly better on the test, but in 2010 many have lost the ability to detect plagiarisms that have been slightly edited - word orders switched, words dropped or added, or synonyms used. The best systems only reached a grade of C-, not quite reaching 70\% of the possible points.
 
 The 2010 test included not only short essays in German, but also ones in English and Japanese. Additionally, a usability metric was calculated that took into account aspects such as design, language consistency, navigation, print quality of the reports, and how well the system fits into the workflow of a university. A new professionalism metric includes giving a real street address and the name of a contact person; not advertising for paper mills or ghostwriting services; answering the phone during normal business hours and not installing malware on the computer under the guise of installing the detection software.
 
 The systems were categorized as partially useful, barely useful, and useless for university purposes. The best systems with between 60 and 70\% effectiveness are PlagAware, Turnitin, Ephorus, PlagScan and Urkund.
 
-Our recommendation: Only use these systems when suspicions of plagiarism arise that cannot be found with 3-5 words in a search machine. The focus should be on teaching students about plagiarism and how to avoid it instead of investing time in using software. Most of the work involved later is in preparing a plagiarism case and dealing with the plagiator, and for this good documentation is needed. Very few systems provide good documentation.
-
+Our recommendation: Only use these systems when suspicions of plagiarism arise that cannot be found with 3-5 words in a search machine. The focus should be on teaching students about plagiarism and how to avoid it instead of investing time in using software. Most of the work involved later is in preparing a plagiarism case and dealing with the plagiator, and for this good documentation is needed. Very few systems provide good documentation." (plagiats)
 
 
 
@@ -640,136 +622,15 @@ Our recommendation: Only use these systems when suspicions of plagiarism arise t
 
 
 \section{Vroni Plag}
-<<<<<<< HEAD
-Erklaerung was ist Vroni Plag....woraus entstanden, welche Mitglieder usw.
-Das ist nicht genau bekannt, da man sich fuer eine Mitarbeit nicht anmelden muss. Es gab am 18.3.2012 6335 Seiten im Wiki, 189 verschiedene Accounts haben schon mal editiert, 21 Leute sind als Admins eingetragen, und es gibt 3 Buerokraten, die Rechte vergeben koennen. 
-
-Das VroniPlag Wiki ist ein am 28. Maerz 2011[2] auf Wikia gegruendetes Wiki, das verschiedene Hochschulschriften - hauptsaechlich Dissertationen - untersucht, die unter Plagiatsverdacht geraten sind. Die Untersuchungen fuehrten in mehreren Faellen zur Aberkennung des Doktorgrades.
-
-VroniPlag Wiki, das die Idee des GuttenPlag Wikis adaptiert, ist nach Edmund Stoibers Tochter Veronica benannt, deren Dissertation als erste untersucht[3] und der infolge dessen der Doktorgrad aberkannt wurde.[4] Bis Februar 2012 erhoehte sich die Zahl der namentlich genannten untersuchten Arbeiten auf 18, darunter einige von Politikern.
-
-Der Gruender von VroniPlag ist Martin Heidingsfelder.
-
-Alte und Junge, Maenner und Frauen, Wissenschaftler und Nicht-Wissenschaftler aus allen moeglichen Orten. 
-
-
-Die Wiki-Beitragenden haben unterschiedliche Motivationen und Ziele, manche behalten diese fuer sich. Viele Wiki-Beitragende wenden sich mit der Plagiatsdokumentation gegen akademisches und wissenschaftliches Fehlverhalten. Durch die Plagiatsdokumentation erlangt das Thema "Plagiat" Aufmerksamkeit. Diskussionen werden angeregt, und es entsteht ein Problembewusstsein, das der qualitativen Verbesserung von wissenschaftlichen Arbeiten dienlich ist. Textsynopsen dienen der Meinungsbildung und legen unterschiedliche Vorgehenstechniken bei woertlichen und sinngemaessen Plagiaten offen. In der speziellen Art, im Umfang, und in der Haeufigkeit von Plagiaten offenbaren sich verschiedene Defizite in der Qualitaet von Dissertations und Habilitationsschriften, Defizite in deren Bewertung und Defizite in der Betreuung der Kandidaten. Einige Wiki-Beitragende leiten aus der oeffentlichkeit der Dokumentation eine Praeventionswirkung ab, welche hilft, Plagiatsfaelle in der Zukunft zu vermeiden. Manche interessieren sich nur fuer ganz bestimmte Plagiatsfaelle. Der/die eine oder andere mag ein besonderes Interesse an der Aberkennung eines zu Unrecht verliehenen Doktorgrads haben. Auch wissenschaftliche Interessen (Plagiatsforschung) werden vertreten. Im Sinne einer Rezension klaert die Plagiatsdokumentation ueber die Zitierbarkeit von Werken und die Originalitaet von deren Inhalten auf. 
-
-Wissenschaftsplagiate sind unzureichend kenntlich gemachte woertliche und sinngemaesse uebernahmen aus anderen Texten in wissenschaftlichen Schriften. Oft wird dadurch ein wissenschaftlicher Erkenntnisgewinn vorgetaeuscht oder fruehere Ideen fremder Autoren erscheinen als vermeintlich neue eigene Ideen. Wissenschaftsplagiate fuehren dazu, dass wissenschaftliche Arbeiten ihren wesentlichen Zweck verfehlen: Neue Erkenntnisse hervorzubringen. Sie fuehren dazu, dass falsche Autoren zitiert und verfaelschte, verwaesserte, unreflektierte, und manchmal unrichtige Inhalte wiedergegeben werden. Sie konterkarieren den Fortschritt. Sie fuehren zur Verschwendung von Forschungsgeldern. Sie haben auch zur Folge, dass ungeeignete Personen wissenschaftliche Fuehrungspositionen erlangen. Aus diesen Gruenden ist Redlichkeit in der Wissenschaft so wichtig. 
-	\subsection{Activities}
-	
-	Das VroniPlag Wiki ist ein am 28. Maerz 2011[2] auf Wikia gegruendetes Wiki, das verschiedene Hochschulschriften - hauptsaechlich Dissertationen - untersucht, die unter Plagiatsverdacht geraten sind. Die Untersuchungen fuehrten in mehreren Faellen zur Aberkennung des Doktorgrades.
-
-VroniPlag Wiki, das die Idee des GuttenPlag Wikis adaptiert, ist nach Edmund Stoibers Tochter Veronica benannt, deren Dissertation als erste untersucht[3] und der infolge dessen der Doktorgrad aberkannt wurde.[4] Bis Februar 2012 erhoehte sich die Zahl der namentlich genannten untersuchten Arbeiten auf 18, darunter einige von Politikern.
-
-Der Gruender von VroniPlag ist Martin Heidingsfelder.	
-	
-	
-
-		\subsubsection{Ergbnisreport}
-		Fuer die Vorlage an den Ausschuss
-	 \begin{figure}[!h]
-  \centering
-  \fbox{
-    \includegraphics[width=0.97\textwidth]{images/page-numbers.png}
-  }
-  \caption{Page numbers}
-  \label{fig:page numbers}
-\end{figure}
-
-
-	\subsubsection{Barcode analysis}
-	
-	 \begin{figure}[!h]
-  \centering
-  \fbox{
-    \includegraphics[width=0.97\textwidth]{images/barcode.png}
-  }
-  \caption{Barcode analysis}
-  \label{fig:plagawareWebsite}
-\end{figure}
-	
-	
-
-
-	\subsubsection{Plagiarism page analysis}
-	
-	 \begin{figure}[!h]
-  \centering
-  \fbox{
-    \includegraphics[width=0.97\textwidth]{images/fragments.png}
-  }
-  \caption{fragments}
-  \label{fig:fragments}
-\end{figure}
-
-
-	 \begin{figure}[!h]
-  \centering
-  \fbox{
-    \includegraphics[width=0.97\textwidth]{images/colors.png}
-  }
-  \caption{colors}
-  \label{fig:colors}
-\end{figure}
-
-
-	
-
-
-\subsection{Pros vs. Cons} 
-	
-%http://plagiat.htw-berlin.de/software/
-%http://www.f4.htw-berlin.de/~weberwu/classes/HTW/projects/Plagiarism-Detection-Cockpit.shtml
-%http://www.guardian.co.uk/books/2005/nov/23/comment.stephenmoss
-%http://de.vroniplag.wikia.com/wiki/Home
-%http://de.guttenplag.wikia.com/wiki/GuttenPlag_Wiki
-
-
-
-
-%weitere Literatur
-%h1. Plagiarism Papers
-%
-%This page is a categorized collection of papers on plagiarism. 
-%
-%* http://ieeexplore.ieee.org/xpl/freeabs_all.jsp?arnumber=1306552 Is there a HTW account for IEEE?
-%* http://ieeexplore.ieee.org/xpl/freeabs_all.jsp?arnumber=28038 Is there a HTW account for IEEE, maybe in the lib?
-%* http://jucs.org/jucs_12_8/plagiarism_a_survey/jucs_12_08_1050_1084_maurer.pdf
-%* http://dl.acm.org/citation.cfm?id=1328976 [purchase]
-%* http://dl.acm.org/citation.cfm?id=1944681
-%* http://dl.acm.org/citation.cfm?id=1150522 [purchase]
-%
-%
-%h2. Intrinsic Plagiarism Detection
-%
-%* http://www.springerlink.com/content/x7x483u1k3970863/ [purchase] - can we get access somehow?
-%* http://www.icsd.aegean.gr/lecturers/Stamatatos/papers/PAN2009.pdf
-%* http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.142.9615&rep=rep1&type=pdf
-%* http://users.dsic.upv.es/~prosso/resources/PAN09.pdf#page=61
-%
-%
-%h2. Multilingual
-%
-%* http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.143.1752&rep=rep1&type=pdf
-%
-%
-%h2. Workflow and automated detection
-%
-%* http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.120.3708&rep=rep1&type=pdf
-%* http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.107.178&rep=rep1&type=pdf
-%* http://asiapacific-odl.oum.edu.my/C33/F428.pdf
-%
-%
-%h2. Debbie
-%
-%* https://komm-in.uni-hohenheim.de/fileadmin/einrichtungen/agrar/Studium/Plagiate/strategien_plagiate.pdf
-%* http://plagiat.htw-berlin.de/softwareutility/ - Good overview of possible techniques for plagiarism detection
-=======
-
 VroniPlag is a wiki platform which many volunteers, who are ready to give their free time, their money or 
 their books/resources etc. work on. They collaborate with each other in order to detect plagiarism in dissertations or
 habilitations.
+
+
+Das VroniPlag Wiki ist ein am 28. Maerz 2011[2] auf Wikia gegruendetes Wiki, das verschiedene Hochschulschriften - hauptsaechlich Dissertationen - untersucht, die unter Plagiatsverdacht geraten sind. Die Untersuchungen fuehrten in mehreren Faellen zur Aberkennung des Doktorgrades.
+Der Gruender von VroniPlag ist Martin Heidingsfelder.	
+Das ist nicht genau bekannt, da man sich fuer eine Mitarbeit nicht anmelden muss. Es gab am 18.3.2012 6335 Seiten im Wiki, 189 verschiedene Accounts haben schon mal editiert, 21 Leute sind als Admins eingetragen, und es gibt 3 Buerokraten, die Rechte vergeben koennen. 
+
 
 VroniPlag is named after the first case which they published. The case was the one of Veronica Sa√ü.
 
@@ -849,4 +710,20 @@ Most of the work by VroniPlag is done by hand. For example collaborators could u
 or they borrow books from the library and scan the texts. Generally there is no special software to help detect 
 plagiarism, but collaborator could feel free to choose some of the existing software to help work faster.
 
->>>>>>> ebca5cfff893c4373ee61b12245e6d97491259bc
+\subsection{Pros \& Contras}
+%Es wird auch gezeigt, aus welchen Dokumentation der Text uebernommen wird. 
+%Ein Link zur originalen Quelle ist auch verfügbar. Außerdem gibt es noch Anmerkungen der Person, der den Sichtungsvermerk gemacht hat.
+%
+%Leider gibt es keine Markierung für die Plagiatstelle. Von daher kann man die Plagiatstelle nicht gleich ansehen, sondern erst den Text durchlesen, um die herauszufinden.3. andere  Links
+
+
+	 \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.6\textwidth]{images/colors.png}
+  }
+  \caption{colors}
+  \label{fig:colors}
+\end{figure}
+
+	
