Simtext and Tesseract texts

--- a/docs/Developers Manual/parts/requirements.tex
+++ b/docs/Developers Manual/parts/requirements.tex
@@ -3,7 +3,7 @@
 % it probably could be integrated here
 \chapter{Project Workflow and  Requirements}\label{chap:systemRequirements}
 
-First of all, we've got a confession to make: Unplagged is like a big playground of new 
+First of all, we've got some kind of confession to make: Unplagged is like a big playground of new 
 workflows and technologies for us, as we are aiming to incorporate 
 \enquote{best-practices} wherever possible, or at least what we currently consider to be best-practices. 
 
