--- a/docs/Developers Manual/parts/developing-unplagged.tex
+++ b/docs/Developers Manual/parts/developing-unplagged.tex
@@ -16,27 +16,25 @@ brings a lot of features, that are useful to this project.
 
 For most of the other topics, we will give you some (hopefully) helpful resources on the way, if it isn't covered 
 thoroughly by us. But just to let you
-know, here is a list of the buzzwords, er technologies that will be mentioned:
+know, here is a list of the buzzwords, err technologies that will be mentioned:
 
 \begin{itemize}
-\item Scrum
 \item HTML5 and CSS3
 \item Continuous Integration
 \item Responsive Webdesign
 \item Progressive Enhancement
 \item Git, Netbeans, Redmine
-\item Tesseract, Imagemagick
-\item Simtext
+\item Tesseract, Imagemagick, Simtext
 \end{itemize}
 
-As said in section \nameref{platforms}, the system is developed, so that it should work on multiple platforms. 
+As said before, the system is developed, so that it should work on multiple platforms. 
 This makes it sometimes difficult to describe certain installation processes in a way that would work for everybody. As
 it's often most problematic, to get some Linux software running on Windows, we will mostly concentrate on the way those
 things are done on this platform and give the instructions for other operating systems as an aside if necessary.
 
 \section{Development Environment}
 
-The following parts will mostly focus on the way you can get a development version of unplagged up and running on your 
+The following section will mostly focus on the way you can get a development version of unplagged up and running on your 
 system.
 
 \subsection{Git}
@@ -49,7 +47,7 @@ made it also interesting for us to use it for Unplagged. % citation?
 
 However, none of the team memebers had ever used 
 Git before in a bigger context so it was a challenge to get it running on all the systems. But we took it, to explore all the 
-features Git offers. .
+features Git offers.
 
 % This feels weird, because the description afterwards is actually nearly the same as in the video, so why show it?
 % I think we should strike this point
@@ -121,7 +119,7 @@ However, if the given instructions in this manual are not enough, feel free to c
 \item \url{http://schacon.github.com/git/user-manual.html}
 \end{itemize}
 
-The unplagged project consists of several branches, which are used to develop and store code independently of the other 
+The Unplagged project consists of several branches, which are used to develop and store code independently of the other 
 developers. Once a new feature is done, it is merged into the master branch. The master branch usually includes only 
 fully tested and deployable source code. 
 
@@ -136,7 +134,7 @@ Now anything in the repository can be changed. At any point changes can be versi
 \texttt{git commit} 
 command. If new files were created, \texttt{git add} has to be executed as well.
 
-\begin{lstlisting}[caption=Commiting]
+\begin{lstlisting}[caption=Adding all new files and commiting]
 git add .
 git commit -m "A message that describes the changes."
 \end{lstlisting}
@@ -146,7 +144,7 @@ deployed to the staging environment. To do this, the master branch has to be che
 and then all changes have to be merged from the new feature into the master branch. The feature branch can then be
 removed.
 
-\begin{lstlisting}[caption=Merging branches]
+\begin{lstlisting}[caption=Merging branch into master]
 git checkout master
 git pull
 git merge mynewfeature
@@ -174,7 +172,7 @@ sources. A nice description of how this process is done can be found at github a
 
 \subsubsection{Handling conflicts in merging process}
 
-It is possible, if two developers were working on the same part of  file, that a conflict is found during the merge. 
+It is possible, if two developers were working on the same part of a file, that a conflict is found during the merge. 
 Such 
 a conflict could look like this:
 
@@ -197,7 +195,7 @@ Merge the remote changes (e.g. 'git pull') before pushing again.  See the
 
 To resolve the issues, open the files listed in the error message, in this case \textit{readme.txt} and decide how 
 the correct 
-version should look like, by removing all the \enquote{< < < < < < <  HEAD} and 
+version should look like, by removing or changingn all the \enquote{< < < < < < <  HEAD} and 
 \enquote{> > > > > > > b478801d68267ef479acc5ca54544634c52c545c} 
 parts accordingly or using a dedicated merge tool, that is able to show you the changes that were made
 
@@ -218,7 +216,7 @@ system to document and detect plagiarism in scientific papers.
 Just a change for educational purposes.
 \end{lstlisting}
 
-Could look like this after merging:
+It could look like this after merging:
 
 
 \begin{lstlisting}[caption=Fixed conflict after merging, keywordstyle=\color{black}]
@@ -244,11 +242,12 @@ some tutorial to get them all running:
 \url{http://www.quarkstar.at/index.php/2009/05/18/webserver-aktivieren-und-konfigurieren-in-mac-os-x/}
 \end{description}
 
-Most Linux distribution should already have this kind of server stack installed.
+Most Linux distributions should already have this kind of server stack installed.
 
-The main goal is to create a local domain and add the virtual host from listing \ref{list:vhost} to the vhost config. 
+The main goal to make the system run, is to create a local domain and add the virtual host from listing \ref{list:vhost} 
+to the vhost config. 
 
-In Max~OS~X and Linux this can be done via 
+In Max~OS~X this can be done via 
 the command line: 
 
 \begin{lstlisting}[caption=Mac OS X: Creating virtual host, language=bash]
@@ -306,7 +305,7 @@ because of it's superior and much more beautiful user interface in comparison to
 \href{http://www.phpdoc.org/}{\citet{PHPDocumentor}}.
 
 Sadly the automatic generation is not yet supported by Netbeans, but as it will be soon\citep{Heise2012}, we are
-currently only generating this server-side as described in section \ref{sec:workflow}. 
+currently only generating this server-side as described in section \ref{sec:continuousIntegration}. 
 
 This section will be enhanced, when the Netbeans user interface becomes available. If you are interested, you could 
 install the software for yourself and use it over the command line.
@@ -322,12 +321,89 @@ would silently fail, which is of course one of the more annoying problems to deb
 
 \subsubsection{Tesseract}
 
-Tesseract is an open source OCR\footnote{Optical character recognition} software, that is used to
+Tesseract is an open source OCR\footnote{Optical character recognition} software, that is currently used to \enquote{figure out}
+texts from scanned images a user can upload. 
 
-\subsubsection{Simtext}
+The big idea is to build the system in a way that enables users to
+plugin their favourite OCR system, but to have one default system that produces satisfying results.
+
+You can download the latest installation files under:
+
+\begin{itemize}
+\item \url{http://code.google.com/p/tesseract-ocr/downloads/list}
+\end{itemize}
+
+After installing Tesseract, the easiest way to make it work with Unplagged, is to put it on your systems execution path,
+so that it could be called from the command line in any directoy.
+
+If for some reason you don't want to do this, you can also change the following line in 
+\texttt{/application/configs/application.ini} to the path where you installed Tesseract to:
+
+\begin{lstlisting}[caption=Tesseract executable path]
+parser.tesseractPath = 'tesseract'
+\end{lstlisting}
+
+You should be able to click the \enquote{parse} icon on files now:
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=0.9\textwidth]{images/parse-button.png}
+  \caption{Parsing Files with Tesseract}
+  \label{fig:parseButton}
+\end{figure}
+
 \subsubsection{Imagemagick}
 
-\subsection{Continuous Integration}
+
+\subsubsection{Simtext}
+
+Simtext is a text comparison tool, that is able to output nice data of the differences between texts. In figure 
+\ref{fig:simtextOutput} for example, you can see the default side-by-side comparison and in figure \ref{fig:simtextDiff}, 
+the output in \textit{diff} format is shown.
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=\textwidth]{images/simtext-output.png}
+  \caption{Default Simtext output}
+  \label{fig:simtextOutput}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=0.8\textwidth]{images/simtext-output-diff.png}
+  \caption{Simtext output in diff format}
+  \label{fig:simtextDiff}
+\end{figure}
+
+Installing Simtext can sadly be a bit tricky, because only the sources and no executables(at least none that worked for us) 
+are distributed. We already
+provided a Windows 64bit EXE and an executable that runs on our Ubuntu staging environment in \texttt{/library/SIM/bin}, 
+but if you use any other environment, you will have to compile the C sources of the system for yourself. The sources can
+be found here:
+
+\begin{itemize}
+\item \url{http://dickgrune.com/Programs/similarity_tester/}
+\end{itemize} 
+
+We assume, that Linux users will be familiar with the installation steps that are described in the readme file. The only
+thing that can be easily overlooked there is the necessity to install \textit{Flex} first. Windows
+however needs some special treatment to make the compilation work:
+
+\begin{enumerate}
+\item Download and install \enquote{Make for Windows} from \url{http://gnuwin32.sourceforge.net/packages/make.htm} and 
+\enquote{Flex for Windows} from \url{http://gnuwin32.sourceforge.net/packages/flex.htm}
+\item Add the folder of the binaries to the path (should be something like \texttt{C:\\Program Files (x86)\\GnuWin32\\bin})
+\item Rename \enquote{flex.exe} to \enquote{lex.exe}
+\item Unzip and open Simtext directory on the command line and type:
+\end{enumerate}
+\begin{lstlisting}[caption=Installing and checking simtext, language=bash]
+>make
+>sim_c --help
+>sim_c READ.ME READ_ME
+\end{lstlisting}
+
+
+\subsection{Continuous Integration}\label{sec:continuousIntegration}
 
 To always have a running version of the latest code, we use an automated workflow, that always deploys everything that 
 has been pushed to the Github repository on the Unplagged staging server. The machine this is done with, is a simple 
