chapter summary and outlook

--- a/docs/Developers Manual/Developers-Manual.tex
+++ b/docs/Developers Manual/Developers-Manual.tex
@@ -103,6 +103,7 @@
 \include{parts/plagiarism}
 \include{parts/requirements}
 \include{parts/developing-unplagged}
+\include{parts/summary-and-outlook}
 \include{parts/appendix}
 \bibliography{biblio}
 \end{document}
